Adding the EasyChair submission links

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 	    self-contained and in English.
 	  </p>
 	  <p>
-	    All papers should be submitted to <a href="">https://easychair.org/conferences/?conf=mepdaw2022</a>.
+	    All papers should be submitted to <a href="https://easychair.org/conferences/?conf=mepdaw2022">https://easychair.org/conferences/?conf=mepdaw2022</a>.
 	  </p>
         </div>
 
@@ -330,7 +330,7 @@
         <div class="bs-component">
           <h3>Important Dates (AoE Time)</h3>
           <ul>
-	    <li><u>Submission</u> (<a href="">EasyChair</a>): August 26<sup>th</sup>, 2022</li>
+	    <li><u>Submission</u> (<a href="https://easychair.org/conferences/?conf=mepdaw2022">EasyChair</a>): August 26<sup>th</sup>, 2022</li>
             <li><u>Notification</u>: September 30<sup>th</sup>, 2022</li>
             <li><u>Camera-ready</u>: October 13<sup>th</sup>, 2022</li>
             <li><u>Presentation</u>: October 23<sup>rd</sup>, 2022</li>
