Adding PC members

--- a/index.html
+++ b/index.html
@@ -300,29 +300,30 @@
         </div>
         <div class="bs-component">
           <h3>Program Committee</h3>
-	  <p>TBA.</p>
-	  <!-- <table> -->
-          <!--   <tbody> -->
-          <!--     <tr style="border-bottom: 1px solid;"> -->
-	  <!-- 	<th>Name</th> -->
-	  <!-- 	<th>Affiliation</th> -->
-          <!--     </tr> -->
-	  <!--     <tr><td>Natanael Arndt </td><td>Leipzig University, Germany</td></tr> -->
-	  <!--     <tr><td>Ioannis Chrysakis</td><td>FORTH-ICS, Greece; and Ghent University - IDLab – imec, Belgium</td></tr> -->
-	  <!--     <tr><td>Pieter Colpaert</td><td>Ghent University, Belgium</td></tr> -->
-	  <!--     <tr><td>Marcos Da Silveira</td><td>LIST, Luxembourg</td></tr> -->
-	  <!--     <tr><td>Christophe Debruyne</td><td>Trinity College Dublin, Ireland</td></tr> -->
-	  <!--     <tr><td>Javier D. Fern&aacute;ndez</td><td>F. Hoffmann-La Roche AG, Switzerland</td></tr> -->
-	  <!--     <tr><td>Luis Ibanez-Gonzalez</td><td>University of Southampton, England</td></tr> -->
-	  <!--     <tr><td>Pavel Klinov</td><td>Stardog Union, Germany</td></tr> -->
-	  <!--     <tr><td>Pierre Maillot</td><td>Inria, France</td></tr> -->
-	  <!--     <tr><td>Harshvardhan J. Pandit</td><td>ADAPT Centre - Trinity College Dublin, Ireland</td></tr> -->
-	  <!--     <tr><td>George Papastefanatos</td><td>IMIS / RC "Athena", Greece</td></tr> -->
-	  <!--     <tr><td>Iliana Petrova</td><td>Inria, France</td></tr> -->
-	  <!--     <tr><td>Fatiha Sa&iuml;s</td><td>LRI & Paris Saclay University, France</td></tr> -->
-	  <!--     <tr><td>Ruben Taelman</td><td> Ghent University – imec, Belgium</td></tr> -->
-          <!--   </tbody> -->
-          <!-- </table> -->
+	  <table>
+            <tbody>
+              <tr style="border-bottom: 1px solid;">
+		<th>Name</th>
+		<th>Affiliation</th>
+              </tr>
+	      <tr><td>Natanael Arndt</td><td>Eccenca GmbH, Germany</td></tr>
+	      <tr><td>David Chaves-Fraga</td><td>Universidad Politécnica de Madrid, Spain</td></tr>
+	      <tr><td>Ioannis Chrysakis</td><td>FORTH-ICS, Greece; and Ghent University - IDLab – imec, Belgium</td></tr>
+	      <tr><td>Pieter Colpaert</td><td>Ghent University, Belgium</td></tr>
+	      <tr><td>Marcos Da Silveira</td><td>LIST, Luxembourg</td></tr>
+	      <tr><td>Christophe Debruyne</td><td>Université de Liège, Belgium</td></tr>
+	      <tr><td>Javier D. Fern&aacute;ndez</td><td>F. Hoffmann-La Roche AG, Switzerland</td></tr>
+	      <!-- <tr><td>Luis Ibanez-Gonzalez</td><td>University of Southampton, England</td></tr> -->
+	      <tr><td>Pavel Klinov</td><td>Stardog Union, Germany</td></tr>
+	      <!-- <tr><td>Pierre Maillot</td><td>Inria, France</td></tr> -->
+	      <tr><td>Harshvardhan J. Pandit</td><td>ADAPT Centre - Trinity College Dublin, Ireland</td></tr>
+	      <tr><td>George Papastefanatos</td><td>IMIS / RC "Athena", Greece</td></tr>
+	      <tr><td>Iliana Petrova</td><td>Inria, France</td></tr>
+	      <tr><td>Philipp D. Rohde</td><td>TIB Leibniz Information Centre for Science and Technology, Germany</td></tr>
+	      <tr><td>Fatiha Sa&iuml;s</td><td>LRI & Paris Saclay University, France</td></tr>
+	      <tr><td>Ruben Taelman</td><td> Ghent University – imec, Belgium</td></tr>
+            </tbody>
+          </table>
         </div>
 	
       </div>
