Updating Maria-Esther's biography

--- a/index.html
+++ b/index.html
@@ -279,12 +279,11 @@
 	    processing over knowledge graphs.</li>
 	    <li><a href="https://www.tib.eu/en/research-development/scientific-data-management/staff/maria-esther-vidal/">Maria-Esther
 	    Vidal</a> (Leibniz Information Centre for Science and
-	    Technology (TIB) & L3S, Germany) is the head of the
-	    Scientific Data Management group at the Leibniz
-	    Information Centre for Science and Technology (TIB) and
-	    L3S, Germany. Maria-Esther is also a full professor
-	    (retired) from Universidad Simón Bolívar (USB)
-	    Venezuela. Her interests include data and knowledge
+	    Technology (TIB) & Leibniz University, Hannover, Germany)
+	    is the head of the Scientific Data Management group at the
+	    Leibniz Information Centre for Science and Technology
+	    (TIB) and a full professor at the Leibniz University of
+	    Hannover. Her interests include data and knowledge
 	    management, knowledge representation, big data, and
 	    semantic web.</li>
 	  </ul>
