--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	      Science Association (SWSA) have been closely monitoring
 	      the situation evolving around Covid-19. They have
 	      decided that ISWC 2022 together with its associated
-	      workshops will be <b>hybrid</b> events.
+	      workshops will be <b>fully remote</b> events.
 	    </p>
 	  </div>
 	</div>
@@ -228,7 +228,7 @@
         </div>
 	<div class="bs-component">
           <ul>
-	    <li>Submission: <b>August 26<sup>th</sup>, 2022</b></li>
+	    <li>Submission: <strike>August 26<sup>th</sup>, 2022</strike> <b>September 16<sup>th</sup>, 2022</b></li>
             <li>Notification: September 30<sup>th</sup>, 2022</li>
             <li>Camera-ready: October 13<sup>th</sup>, 2022</li>
             <li>Presentation: <b>October 23<sup>rd</sup>, 2022</b></li>
@@ -330,7 +330,7 @@
         <div class="bs-component">
           <h3>Important Dates (AoE Time)</h3>
           <ul>
-	    <li><u>Submission</u> (<a href="https://easychair.org/conferences/?conf=mepdaw2022">EasyChair</a>): August 26<sup>th</sup>, 2022</li>
+	    <li><u>Submission</u> (<a href="https://easychair.org/conferences/?conf=mepdaw2022">EasyChair</a>): September 16<sup>th</sup>, 2022</li>
             <li><u>Notification</u>: September 30<sup>th</sup>, 2022</li>
             <li><u>Camera-ready</u>: October 13<sup>th</sup>, 2022</li>
             <li><u>Presentation</u>: October 23<sup>rd</sup>, 2022</li>
