Adding last year's proceedings

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
       <li><a href="http://ceur-ws.org/Vol-2112/">2018 — MEPDaW</a> was held at ESWC 2018.</li>
       <li><a href="https://dl.acm.org/doi/proceedings/10.1145/3308560">2019 — MEPDaW</a> was held at the Web Conference 2019.</li>
       <li><a href="http://ceur-ws.org/Vol-2821/">2020 — MEPDaW</a> was held at ISWC 2020.</li>
-      <li><a href="">2021 — MEPDaW</a> was held at ISWC 2021.</li>
+      <li><a href="http://ceur-ws.org/Vol-3225/">2021 — MEPDaW</a> was held at ISWC 2021.</li>
     </ol>
   </div>
 </section>
