--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="col-lg-12 uOffset">
         <br>
         <h1 style="padding-top:25px">MEPDaW'22 - Managing the Evolution and Preservation of the Data Web</h1>
-        <p>8th MEPDaW Workshop at ISWC'22, October 23<sup>rd</sup>, 2022 (hybrid event)</p>
+        <p>8th MEPDaW Workshop at ISWC'22, October 23<sup>rd</sup>, 2022</p>
         <div class="row">
           <div class="col-lg-12"><img class="img-responsive" src="img/landscape.jpg" alt="visual banner"></div>
         </div>
@@ -229,8 +229,8 @@
 	<div class="bs-component">
           <ul>
 	    <li>Submission: <strike>August 26<sup>th</sup>, 2022</strike> <b>September 16<sup>th</sup>, 2022</b></li>
-            <li>Notification: September 30<sup>th</sup>, 2022</li>
-            <li>Camera-ready: October 13<sup>th</sup>, 2022</li>
+            <li>Notification: October 14<sup>th</sup>, 2022</li>
+            <li>Camera-ready: October 21<sup>st</sup>, 2022</li>
             <li>Presentation: <b>October 23<sup>rd</sup>, 2022</b></li>
           </ul>
 	  <p>All dates are given for 23:59 Anywhere on Earth.</p>
@@ -331,8 +331,8 @@
           <h3>Important Dates (AoE Time)</h3>
           <ul>
 	    <li><u>Submission</u> (<a href="https://easychair.org/conferences/?conf=mepdaw2022">EasyChair</a>): September 16<sup>th</sup>, 2022</li>
-            <li><u>Notification</u>: September 30<sup>th</sup>, 2022</li>
-            <li><u>Camera-ready</u>: October 13<sup>th</sup>, 2022</li>
+            <li><u>Notification</u>: October 14<sup>th</sup>, 2022</li>
+            <li><u>Camera-ready</u>: October 21<sup>st</sup>, 2022</li>
             <li><u>Presentation</u>: October 23<sup>rd</sup>, 2022</li>
           </ul>
         </div>
