Including Gabriela in the organising committee

--- a/index.html
+++ b/index.html
@@ -277,6 +277,15 @@
 	    Leibniz Universität Hannover. Her research interests
 	    include knowledge management, semantic web, and query
 	    processing over knowledge graphs.</li>
+	    <li><a href="https://www.linkedin.com/in/gabriela-a-ydler-bellorin-a6460b111/">Gabriela
+	    Ydler</a> (L3S Forshungszentrum, Research Center, Germany)
+	    is a student assistant at the Scientific Data Management
+	    research group at TIB. She studied at the University Santa
+	    Maria (Venezuela) and majored in Social Communications,
+	    specializing in corporate communications. She is currently
+	    supporting the group in the area of external
+	    communications and finishing her bachelor degree in
+	    Anthropology and Geography at Universität Bonn.</li>
 	    <li><a href="https://www.tib.eu/en/research-development/scientific-data-management/staff/maria-esther-vidal/">Maria-Esther
 	    Vidal</a> (Leibniz Information Centre for Science and
 	    Technology (TIB) & Leibniz University, Hannover, Germany)
