First version of the programme & Attending details

--- a/index.html
+++ b/index.html
@@ -241,8 +241,148 @@
           <h2 id="program" class="uContent">Program</h2>
         </div>
 
-        <div class="bs-component">
-	  <p>TBA.</p>
+	<div class="bs-component">
+	  <h3>Attending the workshop</h3>
+	  <p>
+	    MEPDaW will take place on <b>Sunday 23<sup>rd</sup> of
+	      October</b> between 10am and 2pm CET. The WebEx link
+	      is <a href="https://tib-eu.webex.com/tib-eu-en/j.php?MTID=m1f46c4371cea3559036df707e8fa0a83">https://tib-eu.webex.com/tib-eu-en/j.php?MTID=m1f46c4371cea3559036df707e8fa0a83</a>
+	      (Meeting number: 2734 460 6343 and Password:
+	      sMPgs8YnW38), provided by TIB. All hours are <b>Central
+	      European Time (CET)</b>. Please, don't forget to
+	      register... &#9786;
+	  </p>
+	  
+	  <h3>Academic Keynote #1</h3>
+	  <blockquote>
+	    <u>Title:</u> Querying the Web of data using sometimes available APIs 
+	    <br>Professor Pieter Colpaert, IDLab, Ghent University -
+	    imec, Belgium<br><a href="https://pietercolpaert.be/#me">https://pietercolpaert.be/#me</a>
+	  </blockquote>
+	  <p>
+	    <u>Abstract:</u> Keeping public APIs up and running is an
+	    art, both from the fund-raising perspective as from the
+	    technical perspective. As a consequence, projects that are
+	    only funded for a short amount of time, will often turn
+	    off their APIs when the project ends, turning all
+	    dependent applications useless. Linked Data Event Streams
+	    (LDES) aims to make data publishers focus on their core
+	    task of making the dataset available for reuse, and
+	    advocates a well preservable (what we’ll call
+	    “materializable”) API structure. Projects can then
+	    republish the LDES in an API of choice. In this talk, we
+	    argue that these APIs should use hypermedia and announce
+	    their existence in a metadata catalogue. That way, query
+	    processors like Comunica can automatically use them when
+	    they are available, and ignore them when they aren’t, but
+	    always guarantee that the question can be answered until
+	    the end of time.
+	  </p>
+
+	  <h3>Academic Keynote #2</h3>
+	  <blockquote>
+	    <u>Title:</u> Fostering a Lively and Tenacious Web of Data
+	    <br>Professor Aidan Hogan, DCC, University of Chile & IMFD, Santiago, Chile
+	    <br><a href="https://aidanhogan.com/">https://aidanhogan.com/</a>
+	  </blockquote>
+	  <p>
+	    <u>Abstract:</u> While the Web of Data continues to
+	    mature, it can still suffer from inertia (being slow to
+	    change) and impermanence (losing track of the
+	    past). Addressing these two flaws in a meaningful way
+	    requires additional work to better understand and harness
+	    dynamics on the Web of Data, not only in terms of data,
+	    but also in terms of queries, links, websites,
+	    definitions, demands, etc. In this talk, we highlight key
+	    challenges relating to dynamics on the Web of Data. We
+	    exemplify issues for the Web of Data that may arise if
+	    such challenges are left neglected: stale or forgotten
+	    data, incorrect results, unchecked vandalism, biased
+	    conclusions, etc. We discuss research lines to address
+	    such challenges relating to representations, modelling,
+	    prediction, revision, synchronisation and
+	    preservation. Within these research lines we identify key
+	    trade-offs, a better understanding of which may help us to
+	    transition towards a more lively and tenacious Web of Data
+	    that is better equipped to serve a changing world.
+	  </p>
+	  
+	  <h4>Please note that the following times are according to the current CET (Central European Time), same as the actual time in Paris (France).</h4>
+	  <h3>Agenda</h3>
+	  <table>
+	    <tbody>
+	      <tr style="border-bottom: 1px solid;">
+		<th>Time (CET)</th><th>Title</th>
+	      </tr>
+	      
+	      <tr style="background-color: rgb(218, 229, 241);">
+		<td style="width: 18%;">At 10:00am</td><td><u>Academic Keynote Session 1</u></td>
+	      </tr>
+	      <tr>
+		<td>10:00am-10:10am</td><td>Opening words</td>
+	      </tr>
+	      <tr>
+		<td>10:10am-10:50am</td><td><u><b>Querying the Web of
+		data using sometimes available APIs</b></u><br>
+		By <a href="https://pietercolpaert.be/#me">Professor
+		Pieter Colpaert</a>, IDLab, Ghent University - imec,
+		Belgium</td>
+	      </tr>
+
+	      <tr style="background-color: rgb(238, 238, 238);">
+		<td>10:50am-11:00am</td><td><i>Break</i></td>
+	      </tr>
+
+	      <tr style="background-color: rgb(218, 229, 241);">
+		<td>At 11:00am</td><td><u>Paper Session I</u></td>
+	      </tr>
+	      <tr>
+		<td>11:00am-11:25am</td><td>Modelling & Analyzing
+		Changes within LD source data<br>Alex Randles and
+		Declan O'Sullivan</td>
+	      </tr>
+	      <tr>
+		<td>11:25am-11:50am</td><td>Event sourcing in
+		Solid<br>Wout Slabbinck, Ruben Dedecker, Sindhu
+		Vasireddy, Ruben Verborgh and Pieter Colpaert</td>
+	      </tr>
+
+	      <tr style="background-color: rgb(238, 238, 238);">
+		<td>11:50am-12:00pm</td><td><i>Break</i></td>
+	      </tr>
+
+	      <tr style="background-color: rgb(218, 229, 241);">
+		<td>At 12:00pm</td><td><u>Academic Keynote Session 2</u></td>
+	      </tr>
+	      <tr>
+		<td>12:00pm-12:50pm</td><td><u><b>Fostering a Lively and Tenacious Web of Data
+		  </b></u><br>
+		By <a href="https://aidanhogan.com/">Professor Aidan
+		Hogan</a>, DCC, University of Chile & IMFD,
+		Santiago, Chile</td>
+	      </tr>
+
+	      <tr style="background-color: rgb(218, 229, 241);">
+		<td>At 12:50pm</td><td><u>Paper Session II</u></td>
+	      </tr>	      
+	      <tr>
+		<td>12:50pm-1:15pm</td><td>What does it mean when your
+		URIs are redirected? Examining identity and
+		redirection in the LOD cloud<br>Idries Nasim, Shuai
+		Wang, Joe Raad, Peter Bloem and Frank van
+		Harmelen</td>
+	      </tr>
+	      <tr>
+		<td>1:15pm-1:40pm</td><td>Describing a network of live
+		datasets with the SDS vocabulary<br>Arthur Vercruysse,
+		Sitt Min Oo and Pieter Colpaert</td>
+	      </tr>
+
+	      <tr style="background-color: rgb(218, 229, 241);">
+		<td>At 1:40pm</td><td><u>Discussion & wrap-up</u></td>
+	      </tr>
+	    </tbody>
+	  </table>
 	</div>
 
         <!-- *************** Committee & Organisation Stuff ***************-->
