Changing time zone from CET to CEST

--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@
 	  <h3>Attending the workshop</h3>
 	  <p>
 	    MEPDaW will take place on <b>Sunday 23<sup>rd</sup> of
-	      October</b> between 10am and 2pm CET. The WebEx link
+	      October</b> between 10am and 2pm CEST. The WebEx link
 	      is <a href="https://tib-eu.webex.com/tib-eu-en/j.php?MTID=m1f46c4371cea3559036df707e8fa0a83">https://tib-eu.webex.com/tib-eu-en/j.php?MTID=m1f46c4371cea3559036df707e8fa0a83</a>
 	      (Meeting number: 2734 460 6343 and Password:
 	      sMPgs8YnW38), provided by TIB. All hours are <b>Central
-	      European Time (CET)</b>. Please, don't forget to
+	      European Summer Time (CEST)</b>. Please, don't forget to
 	      register... &#9786;
 	  </p>
 	  
@@ -307,12 +307,12 @@
 	    that is better equipped to serve a changing world.
 	  </p>
 	  
-	  <h4>Please note that the following times are according to the current CET (Central European Time), same as the actual time in Paris (France).</h4>
+	  <h4>Please note that the following times are according to the current CEST (Central European Summer Time), same as the actual time in Paris (France).</h4>
 	  <h3>Agenda</h3>
 	  <table>
 	    <tbody>
 	      <tr style="border-bottom: 1px solid;">
-		<th>Time (CET)</th><th>Title</th>
+		<th>Time (CEST)</th><th>Title</th>
 	      </tr>
 	      
 	      <tr style="background-color: rgb(218, 229, 241);">
