Adding the link to the CEUR-WS volume of the proceedings

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
       </div>
       <div class="col-lg-8">
 	<!-- <\!-- *************** Proceedings Announcement ***************-\-> -->
-	<!-- <div style="color:black; border: 5px solid #D6001C; opacity: .8; padding: 10px; margin: 20px;"> -->
-	<!--   <div> -->
-	<!--     <h3>Proceedings are available through CEUR-WS<br></h3> -->
-	<!--   </div> -->
-	<!--   <div class="bs-component"> -->
-	<!--     <h4><a href="" target="_blank">http://ceur-ws.org/Vol-XYZT/</a></h4> -->
-	<!--   </div> -->
-	<!-- </div> -->
+	<div style="color:black; border: 5px solid #0B3A67; opacity: .8; padding: 10px; margin: 20px;">
+	  <div>
+	    <h3>Proceedings are available through CEUR-WS<br></h3>
+	  </div>
+	  <div class="bs-component">
+	    <h4><a href="https://ceur-ws.org/Vol-3339/" target="_blank">https://ceur-ws.org/Vol-3339/</a></h4>
+	  </div>
+	</div>
 	<!-- *************** COVID 19 Disclaimer ***************-->
 	<div style="color:white; background-color: #0B3A67; opacity: .8; padding: 10px; margin: 20px;">
 	  <div>
